<resources>
    <string name="app_name">Oktava</string>
    <string name="calendar">Календарь</string>
    <string name="exercises">Занятия</string>
    <string name="past">Прошлые</string>
    <string name="future">Будущие</string>
    <string name="bottom_calendar">Тапни по дню, чтобы добавить или изменить занятие</string>
    <string name="add_button">Добавить занятие</string>
    <string name="first_day">пн</string>
    <string name="second_day">вт</string>
    <string name="third_day">ср</string>
    <string name="fourth_day">чт</string>
    <string name="fifth_day">пт</string>
    <string name="sixth_day">сб</string>
    <string name="seventh_day">вс</string>
    <string name="every_week">Каждую неделю</string>
    <string name="each_week">На каждой неделе</string>
    <string name="plan_lesson">Запланировать занятие</string>
    <string name="disregard">Перенести</string>
    <string name="cancel">Отменить</string>
    <string name="time_lunch">13:30</string>
    <string name="last_session">Прошлое занятие</string>
    <string name="november_time">8 ноября</string>
    <string name="time_morning">11:20</string>
    <string name="time">Время</string>
    <string name="passed">Пройдено</string>
    <string name="hours">часа</string>
    <string name="minutes">минут</string>
    <string name="two">2</string>
    <string name="thirty">30</string>
    <string name="step">шага</string>
    <string name="in">в</string>
    <string name="traks">песнях</string>
</resources>