<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">


    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:background="@color/green"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/arrow1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="40dp"
            android:text="@string/calendar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/calendarView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="12dp"
            android:text="@string/exercises"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/past" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="12dp"
            android:text="@string/past"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/future" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/future"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />


    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView3"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/style"
        android:dateTextAppearance="@style/TextAppearance.AppCompat.Body2"
        android:focusedMonthDateColor="#090909"
        android:weekNumberColor="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/bottom_calendar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView3" />

    <LinearLayout
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_rectangle"

        android:orientation="horizontal"
        app:chipSpacing="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chips_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:chipSpacing="0dp"
            app:chipSpacingHorizontal="0dp"
            app:chipSpacingVertical="0dp"

            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/third_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourth_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifth_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixth_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seventh_day"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_above="@+id/set_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:paddingLeft="40dp"
                android:paddingTop="2dp"
                android:paddingRight="40dp"
                android:paddingBottom="3dp"
                android:timePickerMode="spinner" />
        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>


    <RadioButton
        android:id="@+id/radia_every_week"
        android:layout_width="202dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:text="@string/every_week"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/data"
        app:layout_constraintTop_toBottomOf="@+id/data" />

    <ImageButton
        android:id="@+id/image_button_add_task"
        android:layout_width="378dp"
        android:layout_height="59dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/add_button"
        android:contentDescription="@string/add_button"
        android:cropToPadding="true"
        android:focusableInTouchMode="true"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radia_every_week"
        app:srcCompat="@drawable/group144" />

    <TextView
        android:id="@+id/textViewAddTask"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/add_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_add_task"
        app:layout_constraintStart_toStartOf="@+id/image_button_add_task"
        app:layout_constraintTop_toTopOf="@+id/image_button_add_task" />

    <Button
        android:id="@+id/button_schedule_session"
        style="@style/ButtonBlack"
        android:layout_width="353dp"
        android:layout_height="69dp"
        android:layout_marginTop="20dp"
        android:text="@string/plan_lesson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_button_add_task" />


</androidx.constraintlayout.widget.ConstraintLayout>