<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">


    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/green"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/arrow1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="15dp"
            android:text="@string/calendar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/calendarView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="12dp"
            android:text="@string/exercises"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/past" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="12dp"
            android:text="@string/past"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/future" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:text="@string/future"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="15sp" />


    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView3"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/style"
        android:dateTextAppearance="@style/TextAppearance.AppCompat.Body2"
        android:focusedMonthDateColor="#090909"
        android:weekNumberColor="@color/material_dynamic_neutral40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:text="@string/bottom_calendar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView3" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewEdit"
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:layout_gravity="center|top"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_white_rectangle">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/last_session"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="50dp"
                android:text="@string/november_time"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginTop="50dp"
                android:text="@string/time_morning"
                android:textSize="30sp"
                android:textStyle="bold" />


        </FrameLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTime"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="left|top"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlHardcoded">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/background_green_rectangle">


            <TextView
                android:id="@+id/label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:text="@string/time"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="38dp"
                android:text="@string/two"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="38dp"
                android:text="@string/hours"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_thirty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="68dp"
                android:text="@string/thirty"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="68dp"
                android:text="@string/minutes"
                android:textSize="25sp"
                android:textStyle="bold" />

        </FrameLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPassed"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="left|top"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlHardcoded">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/background_green_rectangle">

            <TextView
                android:id="@+id/label_passed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:text="@string/passed"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_two_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="38dp"
                android:text="@string/two"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="38dp"
                android:text="@string/step"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_two_traks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="68dp"
                android:text="в"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_two_traks2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="68dp"
                android:text="@string/two"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_traks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="57dp"
                android:layout_marginTop="68dp"
                android:text="@string/traks"
                android:textSize="25sp"
                android:textStyle="bold" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordingsWhatToPlayRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTime" />


</androidx.constraintlayout.widget.ConstraintLayout>