<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/green"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/bottom_calendar"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/passedSessionDateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_border"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_session"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/passedDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sessionDurationStepContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        >
        <LinearLayout
            android:id="@+id/passedSessionDurationContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/ic_border_transparent"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/passedDurationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passedSessionStepContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/ic_border_transparent"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passed"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/passedStepSongsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recordingsOfPassedRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sessionDurationStepContainer" />

</LinearLayout>
</androidx.core.widget.NestedScrollView>